--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     // "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#656aba",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#448d3f",
+    "statusBarItem.hoverBackground": "#0a748e",
     // "titleBar.activeBackground": "#55b04f",
     // "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#55b04f99",
