--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
    "version": "1.0.0",
    "description": "",
    "main": "server.js",
+   "engines": {
+      "node": "14.x"
+   },
    "scripts": {
-      "start": "nodemon app.js"
+      "start": "node app.js"
    },
    "dependencies": {
       "colors": "^1.4.0",
