--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
    "name": "inventory-management-acc",
    "version": "1.0.0",
-   "description": "",
-   "main": "server.js",
+   "main": "app.js",
    "engines": {
       "node": "14.x"
    },
@@ -17,8 +16,17 @@
       "mongoose": "^5.12.2"
    },
    "devDependencies": {
-      "nodemon": "^2.0.7"
+      "nodemon": "^2.0.20"
    },
    "author": "",
-   "license": "ISC"
+   "license": "ISC",
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Kibria934/First-acc.git"
+   },
+   "bugs": {
+      "url": "https://github.com/Kibria934/First-acc/issues"
+   },
+   "homepage": "https://github.com/Kibria934/First-acc#readme",
+   "description": ""
 }
