--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
-    "build": [
+    "builds": [
         {
-            "src": "app.js",
+            "src": "./app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app.js"
+            "dest": "/"
         }
     ]
 }
